fixed spacing on responsive images

--- a/photographysite/src/app/portfolio/portfolio.component.scss
+++ b/photographysite/src/app/portfolio/portfolio.component.scss
@@ -27,7 +27,7 @@ div.image img {
 
     .limgs {
         width: 100%;
-        margin: 0;
+        margin-bottom:5%;
     }
 
     .portfolio-margin {
@@ -52,7 +52,7 @@ div.image img {
 
     .limgs {
         width: 100%;
-        margin: 0;
+        margin-bottom:5%;
     }
 
     div.wrapping > div {
@@ -75,6 +75,7 @@ div.image img {
 
     .limgs {
         width: 100%;
+        margin-bottom:5%;
     }
 
     div.wrapping > div {
@@ -90,7 +91,7 @@ div.image img {
 
 @media only screen and (min-width: 1200px) {
     .pimgs {
-        width: 25%;
+        width: 24%;
         margin: 0 1% 0 1%;
     }
 
